--- a/src/html/template/base.jade
+++ b/src/html/template/base.jade
@@ -28,10 +28,10 @@ html.root(class='no-js', lang='en-US')
 
     +google-fonts('Roboto:100,100italic,300,300italic,400,400italic,700,700italic')
     +google-fonts('Roboto+Condensed:300,300italic,400,400italic,700,700italic')
-    +css('base')
+    +css('gmd-gh-pages')
     block styles
 
-  body(class=bodyClass)
+  body.body(class=bodyClass)
     .main-wrapper
       block content
 
