--- a/src/css/gmd-gh-pages.sass
+++ b/src/css/gmd-gh-pages.sass
@@ -1,12 +1,13 @@
 @charset 'UTF-8'
 
-// Utils / Vendor
-@import ./utils/shared
+// Util / Vendor
+@import ./util/shared
 @import ./vendor/normalize
-@import ./utils/reset
-@import ./utils/base
+@import ./util/reset
+@import ./util/base
 
-// Components
-@import ./components/body
-@import ./components/main-wrapper
-@import ./components/card
+// Component
+@import ./component/body
+@import ./component/main-wrapper
+@import ./component/card
+@import ./component/fab
