--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -3,9 +3,12 @@ extends ./template/base
 
 //- content
 block content
-  .card
-    header.card__header
-      h1.card__heading Google Material Design
-    
-    section.card__content
-      p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ullam totam, tempora odio, sit voluptate voluptatum minus iusto ipsam maxime dolor eveniet commodi vel atque tenetur autem alias, vitae dolorum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga rerum, atque enim illo voluptates, reprehenderit laudantium aut magni laborum corporis sit. Distinctio ullam quam maxime accusantium doloremque quas, porro tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ab incidunt ea sit quas dolores ducimus nobis possimus. Eveniet quasi fugit numquam facere, ratione quis asperiores rerum amet laudantium dolores!
+  .fab
+
+  .main-wrapper
+    .card
+      header.card__header
+        h1.card__heading Google Material Design
+      
+      section.card__content
+        p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ullam totam, tempora odio, sit voluptate voluptatum minus iusto ipsam maxime dolor eveniet commodi vel atque tenetur autem alias, vitae dolorum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga rerum, atque enim illo voluptates, reprehenderit laudantium aut magni laborum corporis sit. Distinctio ullam quam maxime accusantium doloremque quas, porro tempora. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ab incidunt ea sit quas dolores ducimus nobis possimus. Eveniet quasi fugit numquam facere, ratione quis asperiores rerum amet laudantium dolores!
