--- a/src/html/template/base.jade
+++ b/src/html/template/base.jade
@@ -31,7 +31,7 @@ html.root(class='no-js', lang='en-US')
     +css('gmd-gh-pages')
     block styles
 
-  body.body(class=bodyClass)
+  body.body.markdown-body(class=bodyClass)
     block content
 
     //- Scripts
