--- a/src/css/component/card.sass
+++ b/src/css/component/card.sass
@@ -12,7 +12,7 @@ $selector: 'card'
     margin: 1rem
 
   &__header
-    background: url(../img/material-design-wallpaper-blue.png) bottom
+    background: url(value($settings, hero-img)) bottom
     padding: 8rem 2rem 2em
 
     +breakpoint(md)
