--- a/src/css/component/markdown-body.sass
+++ b/src/css/component/markdown-body.sass
@@ -4,6 +4,37 @@ $selector: 'markdown-body'
 
 .#{$selector}
 
+  a
+    color: value($settings, link-color)
+
+  blockquote
+    font-style: italic
+    margin: 0 0 1em
+
+    +breakpoint(md)
+      margin-bottom: 2em
+
+    &:first-child
+      font-size: 1.1em
+      font-weight: 300
+
+  ul, ol
+    margin-left: 0.75em
+
+    li
+      margin-top: 0.125em
+
+  ul
+    list-style: disc inside
+
+  h2
+    border-bottom: 1px solid value($settings, border-color)
+    padding-bottom: 0.25em
+    margin: 1em 0 0.5em
+
+  h3, h4, h5, h6
+    margin: 1em 0 0.25em
+
   pre
     overflow: auto
     word-wrap: normal
@@ -31,7 +62,7 @@ $selector: 'markdown-body'
   code,
   kbd,
   pre
-    font: 1em Consolas, "Liberation Mono", Menlo, Courier, monospace
+    font: 0.85em unquote(value($fonts, 2))
 
   code
     padding: 0.2em 0
