--- a/src/css/util/base.sass
+++ b/src/css/util/base.sass
@@ -1,4 +1,5 @@
 // Base
 
 body
-  font-family: unquote(value($fonts, 1))
+  color: value($settings, text-color)
+  font: 1em unquote(value($fonts, 1))
