--- a/src/html/template/base.jade
+++ b/src/html/template/base.jade
@@ -27,8 +27,8 @@ html.root(class='no-js', lang='en-US')
     +js('vendor/modernizr.ns')
 
     +google-fonts('Roboto:100,100italic,300,300italic,400,400italic,700,700italic')
-    +google-fonts('Roboto+Condensed:300,300italic,400,400italic,700,700italic')
-    +css('gmd-gh-pages')
+    +google-fonts('Source+Code+Pro')
+    +css('gmd-readme')
     block styles
 
   body.body.markdown-body(class=bodyClass)
