--- a/src/html/template/base.jade
+++ b/src/html/template/base.jade
@@ -31,6 +31,15 @@ html.root(class='no-js', lang='en-US')
     +css('gmd-readme')
     block styles
 
+    if settings && settings.analyticsId
+      script.
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', '#{settings.analyticsId}', 'auto');
+        ga('send', 'pageview');
+
   body.body.markdown-body(class=bodyClass)
     block content
 
